--- a/spring-crud-demo/src/main/resources/application.yml
+++ b/spring-crud-demo/src/main/resources/application.yml
@@ -6,3 +6,13 @@ spring:
     username: root
     password: 123456
     driverClassName: com.mysql.cj.jdbc.Driver
+  redis:
+    database: 0
+    host: localhost
+    port: 6379
+    timeout: 1000
+    password: 0z.z6OVHGLwLmLP9wpunu
+    pool:
+      max-active: 100
+      max-idle: 10
+      max-wait: 100000
